[package]
name = "elgamal"
version = "0.1.0"
authors = [
    "Luke Pearson <luke@dusk.network>",
    "Noemi Glaeser <nglaeser@umd.edu>",
    ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-jubjub = "0.10"
dusk-bytes = "0.1.5"
rand_core = "0.6.3"
thiserror = "1.0"

[build-dependencies]
dusk-jubjub = "0.10"

[dependencies.subtle]
version = "^2.2.1"
default-features = false

[dev-dependencies.rand_core]
version = "0.5"
default-features = false

[dev-dependencies.rand_xorshift]
version = "0.2"
default-features = false
